<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/col_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginStart="@dimen/padding_back"
        android:gravity="center"
        android:paddingTop="@dimen/padding_back"
        android:paddingBottom="@dimen/padding_back"
        android:text="@string/col_date"
        android:textSize="@dimen/small_size"/>

    <TextView
        android:id="@+id/col_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/padding_back"
        android:paddingBottom="@dimen/padding_back"
        android:text="@string/col_weight"
        android:textSize="@dimen/small_size"/>
    <TextView
        android:id="@+id/col_bmi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="@dimen/padding_back"
        android:paddingBottom="@dimen/padding_back"
        android:text="@string/col_bmi"
        android:textSize="@dimen/small_size"/>
    <TextView
        android:id="@+id/col_cate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_marginEnd="@dimen/padding_back"
        android:paddingTop="@dimen/padding_back"
        android:paddingBottom="@dimen/padding_back"
        android:text="@string/col_categories"
        android:textSize="@dimen/small_size"/>
</LinearLayout>