<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/img"
            android:layout_height="@dimen/img"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/padding_back"
            android:layout_marginEnd="@dimen/padding_back"
            android:contentDescription="@string/image"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/top_bottom_text"
                android:paddingBottom="@dimen/top_bottom_text"
                android:text="@string/BMI"
                android:textSize="@dimen/normal_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/top_bottom_text"
                android:paddingBottom="@dimen/top_bottom_text"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_z"
                android:ems="@integer/input_box"
                android:hint="@string/nothing"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/top_bottom_text"
                android:paddingBottom="@dimen/top_bottom_text"
                android:text="@string/height" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_z"
                android:ems="@integer/input_box"
                android:hint="@string/nothing"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/top_bottom_text"
                android:paddingBottom="@dimen/top_bottom_text"
                android:text="@string/BMI" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_z"
                android:paddingTop="@dimen/top_bottom_text"
                android:paddingBottom="@dimen/top_bottom_text"
                android:text="@string/nothing" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/top_bottom_text"
                android:paddingBottom="@dimen/top_bottom_text"
                android:text="@string/calculate" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_z"
                android:paddingTop="@dimen/top_bottom_text"
                android:paddingBottom="@dimen/top_bottom_text"
                android:text="@string/nothing" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cal" />

    </LinearLayout>




</ScrollView>